[project]
name = "mem0-mcp"
version = "0.1.0"
description = "MCP server wrapping a self-hosted mem0 REST API for Claude Desktop/Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.1",
]

[project.scripts]
mem0-mcp = "mem0_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
